el crud de BankAccount creado por defecto con el modelo basico.

--- a/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
@@ -5,44 +5,48 @@
     </div>
     <div class="navbar-header">
 
-
-        @Html.ActionLink(Session["businessName"].ToString(), "Index", "Dashboard","", htmlAttributes: new { @class = "navbar-brand" })
+        @if (Session["businessName"] == null)
+        {
+            Response.Redirect("~/Account/LogIn");
+                }
+        @Html.ActionLink(Session["businessName"].ToString(), "Index", "Dashboard", "", htmlAttributes: new { @class = "navbar-brand" })
 
     </div>
 
     <ul class="nav navbar-top-links navbar-right">
-      
+
         <li class="dropdown">
             @if (Request.IsAuthenticated)
             {
-                          
+
                 @Html.AntiForgeryToken()
-                <a class="dropdown-toggle" data-toggle="dropdown" href="@Url.Action("Index", "Dashboard")">Hello @User.Identity.Name
-                        
+                <a class="dropdown-toggle" data-toggle="dropdown" href="@Url.Action("Index", "Dashboard")">
+                    Hello @User.Identity.Name
+
                     <i class="fa fa-user fa-fw"></i><i class="fa fa-caret-down"></i>
                 </a>
                 <ul class="dropdown-menu dropdown-user">
-        
+
                     <li class="divider"></li>
                     <li>
                         @using (Html.BeginForm("Logout", "Account", FormMethod.Post, new { @class = "navbar-right" }))
                         {  @Html.AntiForgeryToken()
                             @Html.ActionLink("Logout", "Logout", "Account")}
-                            </li>
-                            <li>
-                                @using (Html.BeginForm("", "", FormMethod.Post, new { @class = "navbar-right" }))
-                                {  @Html.AntiForgeryToken()
-                                    @Html.ActionLink("Profile", "Details", "Partners", new {id = @Session["partnerId"]}, "")}
-                                    </li>
+                    </li>
+                    <li>
+                        @using (Html.BeginForm("", "", FormMethod.Post, new { @class = "navbar-right" }))
+                        {  @Html.AntiForgeryToken()
+                            @Html.ActionLink("Profile", "Details", "Partners", new { id = @Session["partnerId"] }, "")}
+                    </li>
                 </ul>
-                
+
             }
-            
+
             <!-- /.dropdown-user -->
         </li>
         <!-- /.dropdown -->
     </ul>
-   
+
     @Html.Partial("Sections/Sidebar")
     <!-- /.navbar-static-side -->
 </nav>
