--- a/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
@@ -28,7 +28,7 @@
                 <a href="@Url.Action("Index", "PartnerContacts")"><i class="fa fa-table fa-fw"></i> Partners Contact</a>
             </li>
             <li>
-                <a href="@Url.Action("", "")"><i class="fa fa-table fa-fw"></i> Bank Accounts</a>
+                <a href="@Url.Action("Index", "BankAccount")"><i class="fa fa-table fa-fw"></i> Bank Accounts</a>
             </li>
             <li>
                 <a href="@Url.Action("Index", "Users")"><i class="fa fa-table fa-fw"></i> Users</a>
