mapeado el BankAccount a BAccountFVModel en index

--- a/OctagonPlatform/Views/BankAccount/Index.cshtml
+++ b/OctagonPlatform/Views/BankAccount/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OctagonPlatform.Models.BankAccount>
+﻿@model IEnumerable<OctagonPlatform.Models.FormsViewModels.BAccountFVModel>
 
 @{
     ViewBag.Title = "Index";
