modificado el detail de BankAccount con BAccoutFVMqodel

--- a/OctagonPlatform/Views/BankAccount/Details.cshtml
+++ b/OctagonPlatform/Views/BankAccount/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model OctagonPlatform.Models.BankAccount
+﻿@model OctagonPlatform.Models.FormsViewModels.BAccountFVModel
 
 @{
     ViewBag.Title = "Details";
