--- a/OctagonPlatform/Views/BankAccount/Create.cshtml
+++ b/OctagonPlatform/Views/BankAccount/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model OctagonPlatform.Models.BankAccount
+﻿@model OctagonPlatform.Models.FormsViewModels.BAEditFVModel
 
 @{
     ViewBag.Title = "Create";
@@ -8,10 +8,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "BankAccount", new { @class = "form-horizontal" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>BankAccount</h4>
         <hr />
@@ -71,29 +71,54 @@
                 @Html.ValidationMessageFor(model => model.Ssn, "", new { @class = "text-danger" })
             </div>
         </div>
+        <div><img id="loading" style="display:none" src="~/Content/loading_icon.gif" alt="" /></div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CountryId, "CountryId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("CountryId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CountryId, "", new { @class = "text-danger" })
+            <div id="Countries">
+                <label for="Countries">Country</label>
+                <select required id="CountryId" name="CountryId" class="form-control">
+                    <option value="231">United States</option>
+                    @foreach (var item in Model.Countries)
+                {
+                        <option value="@item.Id">@item.Name</option>
+                    }
+                </select>
+                @Html.ValidationMessageFor(m => m.CountryId)
+
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.StateId, "StateId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("StateId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.StateId, "", new { @class = "text-danger" })
+            <div id="States">
+                <label for="States">State</label>
+                <select required id="StatesId" name="StateId" class="form-control">
+                    <option value="3930">Florida</option>
+                    @foreach (var item in Model.States)
+                {
+                        <option value="@item.Id">@item.Name</option>
+                    }
+                </select>
+                @Html.ValidationMessageFor(m => m.StateId)
+
             </div>
+            <div><img id="loading" style="display:none" src="~/Content/loading_icon.gif" alt="" /></div>
+
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CityId, "CityId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("CityId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CityId, "", new { @class = "text-danger" })
+            <div id="Cities">
+                <label for="Cities">City</label>
+                <select id="CitiesId" name="CityId" class="form-control">
+                    <option value="43769">Miami</option>
+                    @foreach (var item in Model.Cities)
+                    {
+                        <option value="@item.Id">@item.Name</option>
+                    }
+                </select>
+                @Html.ValidationMessageFor(m => m.CityId)
             </div>
+            <div><img id="loading" style="display:none" src="~/Content/loading_icon.gif" alt="" /></div>
+
         </div>
 
         <div class="form-group">
@@ -137,11 +162,12 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PartnerId, "PartnerId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(m => m.PartnerId)
             <div class="col-md-10">
-                @Html.DropDownList("PartnerId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.PartnerId, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(m => m.PartnerId, new SelectList(Model.Partners, "Id", "BusinessName"), "", new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.PartnerId)
             </div>
+            @Html.LabelFor(model => model.PartnerId, "PartnerId", htmlAttributes: new { @class = "control-label col-md-2" })
         </div>
 
         <div class="form-group">
@@ -165,4 +191,5 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/xpopulate")
 }
