--- a/OctagonPlatform/Views/BankAccount/Edit.cshtml
+++ b/OctagonPlatform/Views/BankAccount/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model OctagonPlatform.Models.BankAccount
+﻿@model OctagonPlatform.Models.FormsViewModels.BAEditFVModel
 
 @{
     ViewBag.Title = "Edit";
@@ -15,6 +15,7 @@
     <div class="form-horizontal">
         <h4>BankAccount</h4>
         <hr />
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
