--- a/OctagonPlatform/Views/Users/Index.cshtml
+++ b/OctagonPlatform/Views/Users/Index.cshtml
@@ -33,7 +33,8 @@
             <td>@item.Email</td>
             <td>@item.Status</td>
             <td>@Html.ActionLink("Edit", "Edit", new {id = item.Id})</td>
-            <td>@Html.ActionLink("Delete", "Delete", new { id = item.Id })</td>
+            <td>@Html.ActionLink("Delete", "Delete", new {id = item.Id},
+                                                                 new {onclick = "return confirm('Are sure wants to delete?');"})</td>
             <td>@Html.ActionLink("Details", "Details", new { id = item.Id })</td>
         </tr>
     }
