--- a/OctagonPlatform/Views/BankAccount/Index.cshtml
+++ b/OctagonPlatform/Views/BankAccount/Index.cshtml
@@ -126,7 +126,7 @@
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                     @Html.ActionLink("Delete", "Delete", new { id = item.Id },
                                                                  new { onclick = "return confirm('Are sure wants to delete?');" }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    @Html.ActionLink("Details", "Details", new { id = item.Id })
                 </td>
             </tr>
         }
