llenado del combo de select de Bank Account en User Details.

--- a/OctagonPlatform/Views/Users/Sections/GetAllBankAccount.cshtml
+++ b/OctagonPlatform/Views/Users/Sections/GetAllBankAccount.cshtml
@@ -1,14 +1,14 @@
 ﻿@model OctagonPlatform.Models.FormsViewModels.UserBAViewModel
 
 @using (Html.BeginForm("AddBA", "Users", new { @class = "form-horizontal" }))
-{
+{   //pendiente controlar el refresh. hacer delay de la busqueda en base datos cuando se le da click. Siempre que se le da click a al Combo, hace un select a la BD y puede atentar contra la disponibilidad.
     @Html.AntiForgeryToken()
     if (Model.BankAccounts == null)
     {
         Model.BankAccounts = new List<OctagonPlatform.Models.BankAccount>();
     }
         <div class="form-horizontal">
-            <div id="BankAccounts">
+            <div id="">
                 <label>Bank</label>
                 <select id="BankAccounts" name="BankAccounts" class="form-control">
                    
