--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -9,3 +9,73 @@
 <br />
 <hr />
 <br />
+<div id="generalInfo">
+    @Html.Partial("Sections/GeneralInfo", Model)
+</div>
+<br />
+<hr />
+<br />
+<div id="cassettes">
+    @Html.Partial("Sections/Cassettes", Model)
+</div>
+<br />
+<hr />
+<br />
+<div id="terminalStatistics">
+    @Html.Partial("Sections/TerminalStatistics", Model)
+</div>
+<br />
+<hr />
+<br />
+<div id="documents">
+    @Html.Partial("Sections/Documents", Model)
+</div>
+<br />
+<hr />
+<br />
+<div id="notes">
+    @Html.Partial("Sections/Notes", Model)
+</div>
+<hr />
+<br />
+<div id="contacts">
+    @Html.Partial("Sections/Contacts", Model)
+</div>
+<br />
+<hr />
+<br />
+<div id="vaultcash">
+    @Html.Partial("Sections/VaultCash", Model)
+</div>
+<br />
+<hr />
+<br />
+<div id="surcharges">
+    @Html.Partial("Sections/SurchargeSplits", Model)
+</div>
+<br />
+<hr />
+<br />
+<div id="interchanges">
+    @Html.Partial("Sections/Interchanges", Model)
+</div>
+<hr />
+<br />
+<div id="cashManagment">
+    @Html.Partial("Sections/CashManagment", Model)
+</div>
+<br />
+<hr />
+<br />
+<div id="transactions">
+    @Html.Partial("Sections/Transactions", Model)
+</div>
+<br />
+<hr />
+<br />
+<div id="users">
+    @Html.Partial("Sections/TerminalUsers", Model)
+</div>
+<br />
+<hr />
+<br />
