--- a/OctagonPlatform/Views/Partners/Create.cshtml
+++ b/OctagonPlatform/Views/Partners/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using OctagonPlatform.Models
-@model OctagonPlatform.Models.FormsViewModels.PartnerFormViewModel
+﻿@model OctagonPlatform.Models.FormsViewModels.PartnerFormViewModel
 
 
 @{
@@ -8,19 +7,21 @@
 }
 <h2>Create Partner</h2>
 
-@using (Html.BeginForm("Create", "Partners", new { @class = "form-horizontal" }))
+@using (Html.BeginForm("Create", "Partners"))
 {
+    @Html.AntiForgeryToken()
+    <div class="form-group">
     <p class="alert alert-danger">
         All fields are <strong>required.</strong>
     </p>
     <p class="alert alert-danger">
         <strong>@ViewBag.Error</strong>
     </p>
-    <p>@Html.ValidationSummary()</p>
-    @Html.AntiForgeryToken()
+    <p>@Html.ValidationSummary(true, "", new { @class = "text-danger" })</p>
+    
     <div class="form-group">
         @Html.LabelFor(m => m.BusinessName)
-        @Html.TextBoxFor(m => m.BusinessName, new {@class = "form-control", autofocus = "autofocus"})
+        @Html.TextBoxFor(m => m.BusinessName, new {@class = "form-control", autofocus = "autofocus", placeholder = "Company's Name"})
         @Html.ValidationMessageFor(m => m.BusinessName)
     </div>
     <div class="form-group">
@@ -35,12 +36,12 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Address1)
-        @Html.TextBoxFor(m => m.Address1, new {@class = "form-control"})
+        @Html.TextBoxFor(m => m.Address1, new {@class = "form-control", placeholder = "124 SW 105 Ave"})
         @Html.ValidationMessageFor(m => m.Address1)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Address2)
-        @Html.TextBoxFor(m => m.Address2, new {@class = "form-control", autofocus = "autofocus"})
+        @Html.TextBoxFor(m => m.Address2, new {@class = "form-control", autofocus = "autofocus", placeholder = "Apto 203, 33181"})
         @Html.ValidationMessageFor(m => m.Address2)
     </div>
     <div class="form-group">
@@ -89,28 +90,29 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Email)
-        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", autofocus = "autofocus" })
+        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", autofocus = "autofocus", placeholder = "test@email.com"})
         @Html.ValidationMessageFor(m => m.Email)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.WorkPhone)
-        @Html.TextBoxFor(m => m.WorkPhone, new { @class = "form-control", autofocus = "autofocus" })
+        @Html.TextBoxFor(m => m.WorkPhone, new { @class = "form-control", autofocus = "autofocus", placeholder = "+1 (305) 227 4187"})
         @Html.ValidationMessageFor(m => m.WorkPhone)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Mobile)
-        @Html.TextBoxFor(m => m.Mobile, new { @class = "form-control", autofocus = "autofocus" })
+        @Html.TextBoxFor(m => m.Mobile, new { @class = "form-control", autofocus = "autofocus", placeholder = "+1 (305) 227 4187" })
         @Html.ValidationMessageFor(m => m.Mobile)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Fax)
-        @Html.TextBoxFor(m => m.Fax, new { @class = "form-control", autofocus = "autofocus" })
+        @Html.TextBoxFor(m => m.Fax, new { @class = "form-control", autofocus = "autofocus", placeholder = "+1 (305) 227 4187" })
         @Html.ValidationMessageFor(m => m.Fax)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.WebSite)
-        @Html.TextBoxFor(m => m.WebSite, new { @class = "form-control", autofocus = "autofocus" })
+        @Html.TextBoxFor(m => m.WebSite, new { @class = "form-control", autofocus = "autofocus", placeholder = "wwww.website.com" })
         @Html.ValidationMessageFor(m => m.WebSite)
+    </div>
     </div>
     <div class="form-group">
         <div class="col-lg-10 col-lg-offset-2">
