--- a/OctagonPlatform/Views/Partners/Edit.cshtml
+++ b/OctagonPlatform/Views/Partners/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
-<h2>Edit</h2>
+<h2>Edit Partner</h2>
 
 @using (Html.BeginForm("Edit", "Partners", new { @class="form-group"}))
 {
@@ -14,12 +14,12 @@
     <p class="alert alert-danger">
         <strong>@ViewBag.Error</strong>
     </p>
-    <p>@Html.ValidationSummary()</p>
+    <p>@Html.ValidationSummary(true, "", new { @class = "text-danger" })</p>
     @Html.AntiForgeryToken()
     @Html.HiddenFor(m => m.Id)
     <div class="form-group">
         @Html.LabelFor(m => m.BusinessName)
-        @Html.TextBoxFor(m => m.BusinessName, new { @class = "form-control", autofocus = "autofocus" })
+        @Html.TextBoxFor(m => m.BusinessName, new { @class = "form-control", autofocus = "autofocus", placeholder = "Company's Name" })
         @Html.ValidationMessageFor(m => m.BusinessName)
     </div>
     <div class="form-group">
@@ -34,12 +34,12 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Address1)
-        @Html.TextBoxFor(m => m.Address1, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Address1, new { @class = "form-control", placeholder = "124 SW 105 Ave" })
         @Html.ValidationMessageFor(m => m.Address1)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Address2)
-        @Html.TextBoxFor(m => m.Address2, new { @class = "form-control", autofocus = "autofocus" })
+        @Html.TextBoxFor(m => m.Address2, new { @class = "form-control", autofocus = "autofocus", placeholder = "Apto 203, 33181" })
         @Html.ValidationMessageFor(m => m.Address2)
     </div>
     <div class="form-group">
@@ -98,27 +98,27 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Email)
-        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", autofocus = "autofocus" })
+        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", autofocus = "autofocus", placeholder = "test@email.com" })
         @Html.ValidationMessageFor(m => m.Email)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.WorkPhone)
-        @Html.TextBoxFor(m => m.WorkPhone, new { @class = "form-control", autofocus = "autofocus" })
+        @Html.TextBoxFor(m => m.WorkPhone, new { @class = "form-control", autofocus = "autofocus", placeholder = "+1 (305) 227 4187" })
         @Html.ValidationMessageFor(m => m.WorkPhone)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Mobile)
-        @Html.TextBoxFor(m => m.Mobile, new { @class = "form-control", autofocus = "autofocus" })
+        @Html.TextBoxFor(m => m.Mobile, new { @class = "form-control", autofocus = "autofocus", placeholder = "+1 (305) 227 4187" })
         @Html.ValidationMessageFor(m => m.Mobile)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Fax)
-        @Html.TextBoxFor(m => m.Fax, new { @class = "form-control", autofocus = "autofocus" })
+        @Html.TextBoxFor(m => m.Fax, new { @class = "form-control", autofocus = "autofocus", placeholder = "+1 (305) 227 4187" })
         @Html.ValidationMessageFor(m => m.Fax)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.WebSite)
-        @Html.TextBoxFor(m => m.WebSite, new { @class = "form-control", autofocus = "autofocus" })
+        @Html.TextBoxFor(m => m.WebSite, new { @class = "form-control", autofocus = "autofocus", placeholder = "wwww.website.com" })
         @Html.ValidationMessageFor(m => m.WebSite)
     </div>
     <div class="form-group">
