--- a/OctagonPlatform/Views/Partners/Sections/Terminals.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/Terminals.cshtml
@@ -1,1 +1,81 @@
-﻿<h1>Terminals</h1>
+﻿@model OctagonPlatform.Models.Partner
+
+<h2>Terminals</h2>
+<nav class="navbar navbar-default"> 
+    <div class="container-fluid">
+        
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active">@Html.ActionLink(
+                                       linkText: "Add Terminal",
+                                       actionName: "Create",
+                                       controllerName: "Terminals",
+                                       routeValues: new
+                                       {
+                                           partnerId = Model.Id
+                                       },
+                                       htmlAttributes: null
+                                       )</li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<p class="alert alert-danger">
+    <strong>@ViewBag.Error</strong>
+</p>
+<table class="table table-striped table-hover ">
+    <thead>
+    <tr class="danger">
+        <th>Terminal ID</th>
+        <th>Partner</th>
+        <th>Location Name</th>
+        <th>Address</th>
+        <th>Phone</th>
+        <th>Country</th>
+        <th>City</th>
+        <th>State</th>
+        <th>Status</th>
+        <th>Cash Balance</th>
+        <th>Last Transaction</th>
+        <th>Last Transaction Type</th>
+    </tr>
+    </thead>
+    
+    <tbody id="listOfTerminals">
+
+    @foreach (var item in Model.Terminals)
+    {
+        <tr class="active">
+            <td>@item.Id</td>
+            <td>@item.Partner.BusinessName</td>
+            <td>@item.LocationType.Name</td>
+            <td>@item.Address1</td>
+            <td>@item.Phone</td>
+            <td>@item.Country.Name</td>
+            <td>@item.City.Name</td>
+            <td>@item.State.Name</td>
+            <td>@item.Status</td>
+            <td>@item.Balance</td>
+            @if (item.LastTransactionId != null)
+            {
+                <td>@item.LastTransactionDate</td>
+                <td>@item.LastTransaction.TransactionType</td>
+            }
+            else
+            {
+                <td>
+                </td>
+                <td></td>
+            }
+            <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink("Edit", "Edit", new { id = item.Id })</td>
+            <td>
+                <i class="glyphicon glyphicon-trash"></i>@Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                                                 
+            </td>
+          
+        </tr>
+    }
+    </tbody>
+
+</table>
