--- a/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
@@ -1,32 +1,22 @@
 ﻿<div class="navbar-default sidebar" role="navigation">
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav" id="side-menu">
-            <li class="sidebar-search">
-                <div class="input-group custom-search-form">
-                    <input type="text" class="form-control" placeholder="Search...">
-                    <span class="input-group-btn">
-                        <button class="btn btn-default" type="button">
-                            <i class="fa fa-search"></i>
-                        </button>
-                    </span>
-                </div>
-                <!-- /input-group -->
-            </li>
+            
             <li>
                 <a href="@Url.Action("Index", "Dashboard", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })"><i class="fa fa-table fa-fw"></i> Dashboard</a>
             </li>
             <li>
-                <a href="@Url.Action("", "")"><i class="fa fa-table fa-fw"></i> Terminals</a>
+                <a href="@Url.Action("Index", "Terminals")"><i class="fa fa-table fa-fw"></i> Terminals</a>
             </li>
-            <li>
+            @*<li>
                 <a href="@Url.Action("", "")"><i class="fa fa-table fa-fw"></i> Terminals Contacts</a>
-            </li>
+            </li>*@
             <li>
                 <a href="@Url.Action("Index", "Partners")"><i class="fa fa-table fa-fw"></i> Partners</a>
             </li>
-            <li>
+            @*<li>
                 <a href="@Url.Action("Index", "PartnerContacts")"><i class="fa fa-table fa-fw"></i> Partners Contact</a>
-            </li>
+            </li>*@
             <li>
                 <a href="@Url.Action("Index", "BankAccount")"><i class="fa fa-table fa-fw"></i> Bank Accounts</a>
             </li>
