--- a/OctagonPlatform/Views/Terminals/Delete.cshtml
+++ b/OctagonPlatform/Views/Terminals/Delete.cshtml
@@ -5,229 +5,225 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Delete Terminal</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="alert-warning">Are you sure you want to delete this?</h3>
 <div>
-    <h4>TerminalFormViewModel</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.City.Name)
-        </dt>
+<dl class="dl-horizontal">
+<dt>
+    Terminal
+</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.City.Name)
-        </dd>
+<dd>
+    @Html.DisplayFor(model => model.Id)
+</dd>
+    <dt>
+        Partner
+    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Country.Name)
-        </dt>
+    <dd>
+        @Html.DisplayFor(model => model.Partner.BusinessName)
+    </dd>
+    <dt>
+        City
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Country.Name)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.City.Name)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.LocationType.Name)
-        </dt>
+    <dt>
+        Country
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.LocationType.Name)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.Country.Name)
+    </dd>
+    <dt>
+        State
+    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Make.Name)
-        </dt>
+    <dd>
+        @Html.DisplayFor(model => model.State.Name)
+    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Make.Name)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Model.Name)
-        </dt>
+    <dt>
+        Location
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Model.Name)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.LocationType.Name)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Partner.BusinessName)
-        </dt>
+    <dt>
+        Make
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Partner.BusinessName)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.Make.Name)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.State.Name)
-        </dt>
+    <dt>
+        Model
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.State.Name)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.Model.Name)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Phone)
-        </dt>
+    
+    <dt>
+        @Html.DisplayNameFor(model => model.Phone)
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Phone)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.Phone)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
+    <dt>
+        @Html.DisplayNameFor(model => model.Status)
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Status)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.Status)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CommunicationType)
-        </dt>
+    <dt>
+        @Html.DisplayNameFor(model => model.CommunicationType)
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.CommunicationType)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.CommunicationType)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Address1)
-        </dt>
+    <dt>
+        @Html.DisplayNameFor(model => model.Address1)
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Address1)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.Address1)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Address2)
-        </dt>
+    <dt>
+        @Html.DisplayNameFor(model => model.Address2)
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Address2)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.Address2)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Zip)
-        </dt>
+    <dt>
+        @Html.DisplayNameFor(model => model.Zip)
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Zip)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.Zip)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EmvReady)
-        </dt>
+    <dt>
+        @Html.DisplayNameFor(model => model.EmvReady)
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.EmvReady)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.EmvReady)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.MachineSerialNumber)
-        </dt>
+    <dt>
+        @Html.DisplayNameFor(model => model.MachineSerialNumber)
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.MachineSerialNumber)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.MachineSerialNumber)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.VeppSerailNumber)
-        </dt>
+    <dt>
+        @Html.DisplayNameFor(model => model.VeppSerialNumber)
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.VeppSerailNumber)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.VeppSerialNumber)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.SoftwareVersion)
-        </dt>
+    <dt>
+        @Html.DisplayNameFor(model => model.SoftwareVersion)
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.SoftwareVersion)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.SoftwareVersion)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.FimwareVersion)
-        </dt>
+    <dt>
+        @Html.DisplayNameFor(model => model.FimwareVersion)
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.FimwareVersion)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.FimwareVersion)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.SurchargeType)
-        </dt>
+    <dt>
+        @Html.DisplayNameFor(model => model.SurchargeType)
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.SurchargeType)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.SurchargeType)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.SurchargeAmmount)
-        </dt>
+    <dt>
+        @Html.DisplayNameFor(model => model.SurchargeAmmount)
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.SurchargeAmmount)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.SurchargeAmmount)
+    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.SurchargeByPercent)
-        </dt>
+    <dt>
+        @Html.DisplayNameFor(model => model.SurchargeByPercent)
+    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.SurchargeByPercent)
-        </dd>
+    <dd>
+        @Html.DisplayFor(model => model.SurchargeByPercent)
+    </dd>
+    <dt>
+        @Html.DisplayNameFor(model => model.SettledType)
+    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.GreaterOrLesser)
-        </dt>
+    <dd>
+        @Html.DisplayFor(model => model.SettledType)
+    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.GreaterOrLesser)
-        </dd>
+    <dt>
+        @Html.DisplayNameFor(model => model.InterChangeAmmount)
+    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.SettledType)
-        </dt>
+    <dd>
+        @Html.DisplayFor(model => model.InterChangeAmmount)
+    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.SettledType)
-        </dd>
+    <dt>
+        @Html.DisplayNameFor(model => model.WhoInitiates)
+    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.InterChangeAmmount)
-        </dt>
+    <dd>
+        @Html.DisplayFor(model => model.WhoInitiates)
+    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.InterChangeAmmount)
-        </dd>
+    <dt>
+        @Html.DisplayNameFor(model => model.CryptoPercentChargeAmmount)
+    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.WhoInitiates)
-        </dt>
+    <dd>
+        @Html.DisplayFor(model => model.CryptoPercentChargeAmmount)
+    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.WhoInitiates)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CryptoChargeAmmount)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CryptoChargeAmmount)
-        </dd>
-
-    </dl>
+</dl>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+        <div class="form-group">
+            <input type="submit" value="Delete" class="btn btn-danger"/> |
+            <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
         </div>
     }
 </div>
