--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -5,180 +5,91 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Terminals</h2>
+<nav class="navbar navbar-default"> 
+    <div class="container-fluid">
+        
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active">@Html.ActionLink(
+                                       linkText: "Add Terminal",
+                                       actionName: "Create",
+                                       controllerName: "Terminals",
+                                       routeValues: new
+                                       {
+                                           partnerId = 1
+                                       },
+                                       htmlAttributes: null
+                                       )</li>
+            </ul>
+            <div class="form-group">
+                <input type="text" class="form-control" id="searchTerminal" placeholder="Search" name="search" />
+            </div> 
+        </div>
+    </div>
+</nav>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
+<p class="alert alert-danger">
+    <strong>@ViewBag.Error</strong>
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.City.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Country.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LocationType.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Make.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Partner.BusinessName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.State.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Phone)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Status)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CommunicationType)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Address1)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Address2)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Zip)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EmvReady)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.MachineSerialNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.VeppSerailNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SoftwareVersion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FimwareVersion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SurchargeType)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SurchargeAmmount)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SurchargeByPercent)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.GreaterOrLesser)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SettledType)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.InterChangeAmmount)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.WhoInitiates)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CryptoChargeAmmount)
-        </th>
-        <th></th>
-    </tr>
+<table class="table table-striped table-hover ">
+    <thead>
+        <tr class="danger">
+            <th>Terminal ID</th>
+            <th>Partner</th>
+            <th>Location Name</th>
+            <th>Address</th>
+            <th>Phone</th>
+            <th>Country</th>
+            <th>City</th>
+            <th>State</th>
+            <th>Status</th>
+            <th>Cash Balance</th>
+            <th>Last Transaction</th>
+            <th>Last Transaction Type</th>
+        </tr>
+    </thead>
+    
+    <tbody id="listOfTerminals">
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.City.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Country.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LocationType.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Make.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Model.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Partner.BusinessName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.State.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Phone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Status)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CommunicationType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address1)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address2)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Zip)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EmvReady)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MachineSerialNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.VeppSerailNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SoftwareVersion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FimwareVersion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SurchargeType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SurchargeAmmount)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SurchargeByPercent)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.GreaterOrLesser)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SettledType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.InterChangeAmmount)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.WhoInitiates)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CryptoChargeAmmount)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr class="active">
+                <td>@item.Id</td>
+                <td>@item.Partner.BusinessName</td>
+                <td>@item.LocationType.Name</td>
+                <td>@item.Address1</td>
+                <td>@item.Phone</td>
+                <td>@item.Country.Name</td>
+                <td>@item.City.Name</td>
+                <td>@item.State.Name</td>
+                <td>@item.Status</td>
+                <td>@item.Balance</td>
+                @if (item.LastTransactionId != null)
+                {
+                    <td>@item.LastTransactionDate</td>
+                    <td>@item.LastTransaction.TransactionType</td>
+                }
+                else
+                {
+                    <td>
+                    </td>
+                    <td></td>
+                }
+                <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink("Edit", "Edit", new { id = item.Id })</td>
+                <td>
+                    <i class="glyphicon glyphicon-trash"></i>@Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                                                 
+                </td>
+                <td><i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink("Details", "Details", new { id = item.Id })</td>
+            </tr>
+        }
+        </tbody>
 
 </table>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/search")
+}
+
+
