deattach bankAccount from users

--- a/OctagonPlatform/Views/Users/Details.cshtml
+++ b/OctagonPlatform/Views/Users/Details.cshtml
@@ -12,7 +12,7 @@
     <img src="@Model.Partner.Logo" width="150" height="150" alt="Partner Logo" />
 </div>
 
-
+@Html.HiddenFor(m => m.Id)
 <div id="generalInfo">
     @Html.Partial("Sections/GenralInfo")
 </div>
