--- a/OctagonPlatform/Views/Users/Sections/BankAccounts.cshtml
+++ b/OctagonPlatform/Views/Users/Sections/BankAccounts.cshtml
@@ -112,10 +112,12 @@
                 </td>
                 <td>
                     <div>
-                        <input type="button" id="deattachBA" value="deattach" class="btn btn-default" />
-                    </div>
-                </td>
-            </tr>
+                        <input type="button" id=@Html.DisplayFor(modelItem => item.Id) value="deattach" class="btn btn-default" />
+</div>
+
+</td>
+
+</tr>
         }
     </tbody>
 </table>
