--- a/OctagonPlatform/Views/Users/Sections/BankAccounts.cshtml
+++ b/OctagonPlatform/Views/Users/Sections/BankAccounts.cshtml
@@ -1,4 +1,4 @@
-﻿@model OctagonPlatform.Models.User
+﻿@model IEnumerable<OctagonPlatform.Models.BankAccount>
 
 <table class="table">
     <tr>
@@ -56,7 +56,7 @@
         <th></th>
     </tr>
     <tbody id="listOfBA">
-        @foreach (var item in Model.BankAccounts)
+        @foreach (var item in Model)
         {
             <tr>
                 <td>
@@ -121,8 +121,4 @@
         }
     </tbody>
 </table>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/user")
-}
 
