--- a/OctagonPlatform/Views/Users/Sections/BankAccounts.cshtml
+++ b/OctagonPlatform/Views/Users/Sections/BankAccounts.cshtml
@@ -3,18 +3,6 @@
 <table class="table">
     <tr>
         <th>
-            City
-        </th>
-        <th>
-            Country
-        </th>
-        <th>
-            BusinessName
-        </th>
-        <th>
-            State
-        </th>
-        <th>
             NickName
         </th>
         <th>
@@ -27,30 +15,6 @@
             Status
         </th>
         <th>
-            NameOnCheck
-        </th>
-        <th>
-            FedTax
-        </th>
-        <th>
-            Ssn
-        </th>
-        <th>
-            Address1
-        </th>
-        <th>
-            Address2
-        </th>
-        <th>
-            Zip
-        </th>
-        <th>
-            Phone
-        </th>
-        <th>
-            Email
-        </th>
-        <th>
             AccountType
         </th>
         <th></th>
@@ -59,18 +23,6 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.City.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Country.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Partner.BusinessName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.State.Name)
-                </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.NickName)
                 </td>
@@ -83,41 +35,18 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Status)
                 </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NameOnCheck)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FedTax)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Ssn)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Address1)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Address2)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Zip)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Phone)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
+
                 <td>
                     @Html.DisplayFor(modelItem => item.AccountType)
                 </td>
                 <td>
                     <div>
-                        <input type="button" id=@Html.DisplayFor(modelItem => item.Id) value="deattach" class="btn btn-default" />
-</div>
+                        @Ajax.ActionLink("Show Banks Accounts", "GetAllBankAccount", "Users", new { userId = Model.Id.ToString() }, new AjaxOptions { UpdateTargetId = "addBankAccounts", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#addBankAccounts" })
+                    </div>
 
-</td>
+                </td>
 
-</tr>
+            </tr>
         }
     </tbody>
 </table>
