para deshacer por si no puedo devolver el tipo de dato por el reflection

--- a/OctagonPlatform/Views/Users/Sections/BankAccounts.cshtml
+++ b/OctagonPlatform/Views/Users/Sections/BankAccounts.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OctagonPlatform.Models.BankAccount>
+﻿@model IEnumerable<OctagonPlatform.Models.FormsViewModels.UserBAViewModel>
 
 <table class="table">
     <tr>
