ajuste de visualizacion de bankAccount

--- a/OctagonPlatform/Views/Users/Details.cshtml
+++ b/OctagonPlatform/Views/Users/Details.cshtml
@@ -18,7 +18,7 @@
 </div>
 BANKACCOUNT
 
-<div class="panel-group">
+<div class="panel-group" style="width: 49%;float: right;">
     <div class="panel panel-default">
         <div class="panel-heading">
             <h4 class="panel-title">Assigned</h4>
@@ -30,7 +30,7 @@ BANKACCOUNT
     </div>
 </div>
 
-<div class="panel-group">
+<div class="panel-group" style="width: 49%;">
     <div class="panel panel-default">
         <div class="panel-heading">
             <h4 class="panel-title">
